package latihan.payment;

public interface PaymentMethod {
    boolean pay(double amount);
}