@startuml

interface PaymentMethod {
    + pay(amount: double): boolean
}

class CreditCard {
    - cardNumber: String
    + pay(amount: double): boolean
}

class PayPal {
    - email: String
    + pay(amount: double): boolean
}

class BankTransfer {
    - accountNumber: String
    + pay(amount: double): boolean
}

class PaymentProcessor {
    + process(method: PaymentMethod, amount: double): void
}

PaymentMethod <|.. CreditCard
PaymentMethod <|.. PayPal
PaymentMethod <|.. BankTransfer

PaymentProcessor --> PaymentMethod

@enduml